c/examples/gcc/testsuite/c-c++-common/gomp/pr79429.c
/* PR c++/79429 */

#pragma omp target /* { dg-error "expected declaration specifiers" } */
